--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/logo.png" type="image/svg+xml" />
+    <link rel="icon" href="/navbar/logo.png" type="image/svg+xml" />
         <meta name="theme-color" content="#F59E0B" />
         <title>ChrysaLink - Lepidoptera Host & Plant Explorer</title>
     </head>
