Fixed website title

--- a/backend/supabase/email_templates/confirm_signup.html
+++ b/backend/supabase/email_templates/confirm_signup.html
@@ -218,11 +218,11 @@
             <div class="features-section">
                 <div class="features-title">Once confirmed, you'll be able to:</div>
                 <ul class="features-list">
-                    <li>Upload observations of butterflies, moths & host plants</li>
-                    <li>Suggest and verify species identifications</li>
-                    <li>Explore relationships between species</li>
-                    <li>Earn badges and build your reputation</li>
-                    <li>Connect with other nature enthusiasts</li>
+                    <li>✓ Upload observations of butterflies, moths & host plants</li>
+                    <li>✓ Suggest and verify species identifications</li>
+                    <li>✓ Explore relationships between species</li>
+                    <li>✓ Earn badges and build your reputation</li>
+                    <li>✓ Connect with other nature enthusiasts</li>
                 </ul>
             </div>
             
