--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=1024" />
     <link rel="icon" href="/navbar/logo.png" type="image/svg+xml" />
         <meta name="theme-color" content="#F59E0B" />
-        <title>ChrysaLink - Lepidoptera Host & Plant Explorer</title>
+        <title>ChrysaLink - Lepidoptera & Host Plant Explorer</title>
     </head>
 
     <body>
