--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
 
   <!DOCTYPE html>
   <html lang="en">
-    <head>
+  <head>
       <meta charset="UTF-8" />
-      <meta name="viewport" content="width=1024" />
-    <link rel="icon" href="/navbar/logo.png" type="image/svg+xml" />
-        <meta name="theme-color" content="#F59E0B" />
-        <title>ChrysaLink - Lepidoptera & Host Plant Explorer</title>
-    </head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="icon" href="/navbar/logo.png" type="image/png" />
+      <meta name="theme-color" content="#F59E0B" />
+      <title>ChrysaLink - Lepidoptera & Host Plant Explorer</title>
+  </head>
 
     <body>
       <div id="root"></div>
