--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,8 @@
         @media (max-width: 768px) {
           body {
             zoom: 0.5;
-            -moz-transform: scale(0.5);
-            -moz-transform-origin: 0 0;
+            transform: scale(0.5);
+            transform-origin: 0 0;
             width: 200%;
           }
         }
